--- a/demos/SequencesIntro.ipynb
+++ b/demos/SequencesIntro.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<html> <h1 style=\"color:brown;line-height:1.5;text-align:center;\">\n",
-    "Introduction to <a href=\"https://github.com/OpenLibMathSeq/Sequences\">Sequences</a>.</h1> \n",
+    "Introduction to <a href=\"https://github.com/OpenLibMathSeq/IntegerSequences\">IntegerSequences</a>.</h1> \n",
     "<p style=\"text-align:center;color:brown\">A Jupyter notebook for the Julia kernel.</p>"
    ]
   },
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "using Sequences"
+    "using IntegerSequences"
    ]
   },
   {
